--- a/react01.html
+++ b/react01.html
@@ -1,7 +1,14 @@
 <HTML>
 <HEAD>
+	<!-- Development versions -->
+	<!--
 	<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+	-->
+	<!-- Production versions: minified -->
+	<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
+	<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>	
+	
 </HEAD>
 <BODY>
 	<h1>A little react example</h1>
