--- a/react02-jsx.html
+++ b/react02-jsx.html
@@ -16,8 +16,14 @@
 	<h1>A little react example</h1>
 	<div id="like_button_container"></div>
 
-	<!-- Load our React component. -->
-	<script src="like_button.js"></script>
+	<script type="text/babel">
+
+      ReactDOM.render(
+        <h1>Hello, world!</h1>,
+        document.getElementById('root')
+      );
+
+    </script>
 
 </BODY>
 </HTML>
