--- a/react02-jsx.html
+++ b/react02-jsx.html
@@ -1,15 +1,18 @@
 <HTML>
 <HEAD>
 	<!-- Development versions -->
-	<!--
 	<script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
 	<script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
-	-->
+
+	<!-- add JSX -->
+	<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+
 	<!-- Production versions: minified -->
+	<!--
 	<script src="https://unpkg.com/react@16/umd/react.production.min.js" crossorigin></script>
 	<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.min.js" crossorigin></script>
+	-->
 
-	<script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
 
 </HEAD>
 <BODY>
