--- a/react02-jsx.html
+++ b/react02-jsx.html
@@ -17,7 +17,7 @@
 </HEAD>
 <BODY>
 	<h1>A little react example</h1>
-	<div id="like_button_container"></div>
+	<div id="root"></div>
 
 	<script type="text/babel">
 
