--- a/src/react02-jsx.html
+++ b/src/react02-jsx.html
@@ -16,7 +16,7 @@
 
 </HEAD>
 <BODY>
-	<h1>A little react example</h1>
+	<h1>Quick and dirty way to try JSX</h1>
 	<div id="root"></div>
 
 	<script type="text/babel">
